force-app/main/default/objects/Prxm_Action_Mapping__mdt/Prxm_Action_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Prxm Action Mapping</label>
    <pluralLabel>Prxm Action Mappings</pluralLabel>
</CustomObject>