force-app/main/default/objects/Prxm_Action_Mapping__mdt/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <description>The unique identifier for this action (e.g., Prxm_Convert_To_Placement). All fields sharing this name will group into one form.</description>
    <inlineHelpText>The unique identifier for this action (e.g., Prxm_Convert_To_Placement). All fields sharing this name will group into one form.</inlineHelpText>
    <label>Action Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>