force-app/main/default/objects/Prxm_Action_Mapping__mdt/fields/Form_Title__c.field-meta.xml
<CustomField>
    <fullName>Form_Title__c</fullName>
    <description>The title displayed at the top of the quick action popup.

Note: Even though this is repeated on every field record for the same action, the LWC just grabs it from the first row.</description>
    <inlineHelpText>The title displayed at the top of the quick action popup.

Note: Even though this is repeated on every field record for the same action, the LWC just grabs it from the first row.</inlineHelpText>
    <label>Form Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>