force-app/main/default/objects/Prxm_Action_Mapping__mdt/fields/Is_Hidden_Background_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Hidden_Background_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRITICAL: If checked, this field maps data and submits it to the database, but hides it entirely from the UI.</description>
    <inlineHelpText>CRITICAL: If checked, this field maps data and submits it to the database, but hides it entirely from the UI.</inlineHelpText>
    <label>Is Hidden Background Field</label>
    <type>Checkbox</type>
</CustomField>