force-app/main/default/objects/Prxm_Action_Mapping__mdt/fields/Is_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Is_Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, pre-populates the data but prevents the user from editing it on the screen.</description>
    <inlineHelpText>If checked, pre-populates the data but prevents the user from editing it on the screen.</inlineHelpText>
    <label>Is Read Only</label>
    <type>Checkbox</type>
</CustomField>