force-app/main/default/objects/Prxm_Action_Mapping__mdt/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, enforces the user to fill this field before the LWC will submit.</description>
    <inlineHelpText>If checked, enforces the user to fill this field before the LWC will submit.</inlineHelpText>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>