force-app/main/default/objects/Prxm_Action_Mapping__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Controls the top-to-bottom display order of this field on the UI (e.g., 10, 20, 30).</description>
    <inlineHelpText>Controls the top-to-bottom display order of this field on the UI (e.g., 10, 20, 30).</inlineHelpText>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>