force-app/main/default/objects/Prxm_Action_Mapping__mdt/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <description>Section name for UI grouping. Fields with the same value will be grouped together under a section header in the dynamic form. Leave blank to display the field outside any section.</description>
    <inlineHelpText>- Enter a section name to group this field with others under a common header in the generated UI (e.g., “Financials”, “Details”).
- All fields with the same section name will appear together under that header.
- The order of sections is determined by the lowest Order value among fields in that section.
- Fields within a section are also ordered by their Order value.
- Leave blank if this field should not be grouped under a section.</inlineHelpText>
    <label>Section Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>