force-app/main/default/objects/Prxm_Action_Mapping__mdt/fields/Source_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_API_Name__c</fullName>
    <description>The API name of the field on the Source Object to pull default data from (e.g., Proposed_Pay_Rate__c).</description>
    <inlineHelpText>The API name of the field on the Source Object to pull default data from (e.g., Proposed_Pay_Rate__c).</inlineHelpText>
    <label>Source Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>