force-app/main/default/objects/Prxm_Action_Mapping__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>API Name of the object the button clicked from (e.g., Job_Applicant__c). Leave blank if no source record</description>
    <inlineHelpText>API Name of the object the button clicked from (e.g., Job_Applicant__c). Leave blank if no source record</inlineHelpText>
    <label>Source Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>