force-app/main/default/objects/Prxm_Action_Mapping__mdt/fields/Static_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Static_Default_Value__c</fullName>
    <description>Hardcoded fallback value. You can also use {sourceRecordId} to dynamically inject the current record ID.</description>
    <inlineHelpText>Hardcoded fallback value. You can also use {sourceRecordId} to dynamically inject the current record ID.</inlineHelpText>
    <label>Static Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>