force-app/main/default/objects/Prxm_Action_Mapping__mdt/fields/Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_API_Name__c</fullName>
    <description>The API name of the field on the Target Object where data will be saved (e.g., Pay_Rate__c).</description>
    <inlineHelpText>The API name of the field on the Target Object where data will be saved (e.g., Pay_Rate__c).</inlineHelpText>
    <label>Target Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>