force-app/main/default/objects/Prxm_Action_Mapping__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>API Name of the object this form will insert a record into (e.g., Placement__c).</description>
    <inlineHelpText>API Name of the object this form will insert a record into (e.g., Placement__c).</inlineHelpText>
    <label>Target Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>